--- a/theme/fixes.css
+++ b/theme/fixes.css
@@ -339,7 +339,6 @@ div.icon-39rdLt {
 
 .overlayBackground-1KgwVi>.menu-1QACrS.styleFlexible-x0_sIC.menu-KSaHL1 {
     right: 4px;
-    z-index: 100;
 }
 
 [id^=popout]>div>.accountProfilePopoutWrapper-3GskID>.userPopoutOuter-3AVBmJ>div>.overlayBackground-1KgwVi>*:not(.menu-1QACrS),
